--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -31,6 +31,7 @@
 		"general_btn_ok" : "OK",
 		"general_btn_abort" : "Abbrechen",
 		"general_btn_save" : "Speichern",
+		"general_btn_restarthyperion" : "Hyperion neustarten",
 		"dashboard_label_intro" : "Das Dashboard zeigt dir Informationen zum Systemstatus, ob Updates verfügbar sind, den Komponentenstatus sowie die letzten Blog-Posts vom Hyperion Team.",
 		"dashboard_infobox_label_title" : "Information",
 		"dashboard_infobox_label_currenthyp" : "Deine Hyperion Version:",
@@ -44,7 +45,6 @@
 		"dashboard_componentbox_label_status" : "Status",
 		"dashboard_newsbox_label_title" : "Die letzten Blogposts",
 		"dashboard_alert_message_confedit" : "Deine Hyperion Konfiguration wurde verändert. Um die Änderungen anzuwenden, starte Hyperion neu.",
-		"dashboard_alert_button_restarthyerion" : "Hyperion neustarten",
 		"main_menu_dashboard_token" : "Dashboard",
 		"main_menu_configuration_token" : "Konfiguration",
 		"main_menu_leds_conf_token" : "LED Hardware",
@@ -61,6 +61,8 @@
 		"main_menu_input_selection_token" : "Eingabeauswahl",
 		"main_menu_logging_token" : "Protokoll",
 		"main_menu_webconfig_token" : "Webkonfiguration",
+		"conf_helptable_option" : "Option",
+		"conf_helptable_expl" : "Erklärung",
 		"conf_effects_label_intro" : "Stelle einen Effekt oder Farbe ein, der beim Starten sichtbar sein soll. Stelle einen Hintergrundeffekt/Farbe ein der erst sichtbar wird, wenn alle Bildquellen abgeschaltet sind (Das gilt ebenfalls für temporäres abschalten mithilfe der Kodi Überwachung).",
 		"conf_leds_label_intro" : "Der LED Hardware Bereich ermöglicht eine Vielzahl von Ausgabemöglichkeiten über Raspberry Pi GPIO, USB oder Netzwerk. Erstelle ein LED Layout das zu deinem Aufbau passt und schon kann es losgehen!",
 		"conf_leds_nav_label_ledcontroller" : "LED Steuerung",
@@ -136,6 +138,9 @@
 		"remote_optgroup_usreffets" : "Benutzer Effekte",
 		"remote_optgroup_syseffets" : "Mitgelieferte Effekte",
 		"remote_help_text" : "Hyperion nutzt ein Prioritätensystem um die Quelle zu wählen. Alles was du setzte hat eine Prioität (Effekte/Farben/Plattform Capture/USB Capture und Netzwerkquellen). Standartmäßig nutzt Hyperion die Quelle mit der niedrigsten Prioität. Hier hast du die Möglichkeit die Quelle manuell auszuwählen.",
+		"remote_maptype_label" : "Farbzuordnung",
+		"remote_maptype_label_multicolor_mean" : "Mehrfarbig",
+		"remote_maptype_label_unicolor_mean" : "Einfarbig",
 		"hue_button_create_user_token" : "Benutzer anlegen",
 		"hue_press_link_modal" : "Bitte Link Taste auf der Hue Bridge drücken.",
 		"hue_failure_connection_token" : "Connection Timeout. Bitte drücke die Taste rechtzeitig.",
@@ -148,7 +153,7 @@
 		"effectsconfigurator_label_intro" : "Erstelle auf Grundlage der Basiseffekte neue Effekt die nach deinen Wünschen angepasst sind. Je nach Effekt stehen Optionen wie Farbe, Geschwindigkeit, oder Richtung und vieles mehr zur Auswahl.",
 		"effectsconfigurator_label_chooseeff" : "Basis-Effekt auswählen:",
 		"effectsconfigurator_button_saveeffect" : "Effekt speichern",
-		"effectsconfigurator_label_effectname" : "Effektname:",
+		"effectsconfigurator_label_effectname" : "Effektname",
 		"effectsconfigurator_button_starttest" : "Starte Effekttest",
 		"effectsconfigurator_button_stoptest" : "Stoppe Effekttest",
 		"effectsconfigurator_button_conttest" : "Fortlaufender Test",
@@ -201,6 +206,9 @@
 		"InfoDialog_lang_text" : "Sollte dir die Vorauswahl der automatischen Spracherkennung nicht gefallen, kannst du die Sprache hier manuell festlegen.",
 		"InfoDialog_access_title" : "Zugriffsstufe",
 		"InfoDialog_access_text" : "Abhängig von der Stufe hast du Zugriff auf mehr oder weniger Einstellungen. Empfohlen ist 'Standard'.",
+		"InfoDialog_nowrite_title" : "Fehler beim Schreibzugriff!",
+		"InfoDialog_nowrite_text" : "Hyperion hat keinen Schreibzugriff auf die aktuell geladene Konfiguration. Bitte korrigiere die Dateizugriffsrechte um fortzufahren.",
+		"InfoDialog_nowrite_foottext" : "Die Webkonfiguration wird automatisch wieder freigegeben, sobald das Problem behoben wurde!",
 		"edt_dev_general_heading_title" : "Allgemeine Einstellungen",
 		"edt_dev_general_name_title" : "Name der Konfiguration",
 		"edt_dev_general_ledCount_title" : "Anzahl Hardware LEDs",
@@ -251,62 +259,105 @@
 		"edt_dev_spec_ledIndex_title" : "LED index",
 		"edt_dev_spec_colorComponent_title" : "Farbkomponente",
 		"edt_conf_general_enable_title" : "Aktiviert",
+		"edt_conf_general_enable_expl" : "Wenn aktiviert, ist die Komponente aktiv.",
 		"edt_conf_general_priority_title" : "Priorität",
+		"edt_conf_general_priority_expl" : "Die Priorität dieser Komponente.",
 		"edt_conf_general_port_title" : "Port",
+		"edt_conf_general_port_expl" : "Der genutzte Port.",
 		"edt_conf_color_heading_title" : "Farbkalibrierung",
 		"edt_conf_smooth_heading_title" : "Glättung",
 		"edt_conf_smooth_type_title" : "Art",
+		"edt_conf_smooth_type_expl" : "Algorithmus der Glättung.",
 		"edt_conf_smooth_time_ms_title" : "Zeit",
+		"edt_conf_smooth_time_ms_expl" : "Wie lange soll die Glättung Bilder sammeln?",
 		"edt_conf_smooth_updateFrequency_title" : "Aktualisierungsfrequenz",
+		"edt_conf_smooth_updateFrequency_expl" : "Die Geschwindigkeit der Datenausgabe an die LED Steuerung.",
 		"edt_conf_smooth_updateDelay_title" : "Aktualisierungsverzögerung",
+		"edt_conf_smooth_updateDelay_expl" : "Verzögere die Ausgabe, sollte dein ambient light schneller sein als dein TV.",
 		"edt_conf_smooth_continuousOutput_title" : "Fortlaufende Ausgabe",
+		"edt_conf_smooth_continuousOutput_expl" : "Aktualisiere die LEDs, auch wenn das Bild sich nicht geändert hat.",
 		"edt_conf_v4l2_heading_title" : "USB Aufnahme",
 		"edt_conf_v4l2_device_title" : "Gerät",
+		"edt_conf_v4l2_device_expl" : "Der Pfad zum USB Aufnahmegerät.",
 		"edt_conf_v4l2_input_title" : "Eingang",
+		"edt_conf_v4l2_input_expl" : "Der Eingang des Pfades.",
 		"edt_conf_v4l2_standard_title" : "Videoformat",
+		"edt_conf_v4l2_standard_expl" : "Wähle das passende Videoformat deiner Region.",
 		"edt_conf_v4l2_width_title" : "Breite",
+		"edt_conf_v4l2_width_expl" : "Die Breite des Bildes. (-1 = Automatische Breitenbestimmung)",
 		"edt_conf_v4l2_height_title" : "Höhe",
+		"edt_conf_v4l2_height_expl" : "Die Höhes des Bildes. (-1 = Automatische Höhenbestimmung)",
 		"edt_conf_v4l2_frameDecimation_title" : "Bildverkleinerung",
+		"edt_conf_v4l2_frameDecimation_expl" : "Der Faktor der Bildverkleinerung",
 		"edt_conf_v4l2_sizeDecimation_title" : "Größenänderung",
+		"edt_conf_v4l2_sizeDecimation_expl" : "Der Faktor der Größenänderung",
 		"edt_conf_v4l2_mode_title" : "Modus",
+		"edt_conf_v4l2_mode_expl" : "Modus der USB Aufnahme",
 		"edt_conf_v4l2_useKodiChecker_title" : "Nutze Kodi Überwachung",
+		"edt_conf_v4l2_useKodiChecker_expl" : "Starte/Stoppe Aufnahme mithilfe der Kodi Überwachung.",
 		"edt_conf_v4l2_cropLeft_title" : "Entferne links",
+		"edt_conf_v4l2_cropLeft_expl" : "Anzahl der Pixel auf der linken Seite die vom Bild entfernt werden.",
 		"edt_conf_v4l2_cropRight_title" : "Entferne rechts",
+		"edt_conf_v4l2_cropRight_expl" : "Anzahl der Pixel auf der rechten Seite die vom Bild entfernt werden.",
 		"edt_conf_v4l2_cropTop_title" : "Entferne oben",
+		"edt_conf_v4l2_cropTop_expl" : "Anzahl der Pixel auf der oberen Seite die vom Bild entfernt werden.",
 		"edt_conf_v4l2_cropBottom_title" : "Entferne unten",
+		"edt_conf_v4l2_cropBottom_expl" : "Anzahl der Pixel auf der unteren Seite die vom Bild entfernt werden.",
 		"edt_conf_v4l2_redSignalThreshold_title" : "Rote Signalschwelle",
+		"edt_conf_v4l2_redSignalThreshold_expl" : "Verdunkelt rote Werte. (Wird als schwarz interpretiert)",
 		"edt_conf_v4l2_greenSignalThreshold_title" : "Grüne Signalschwelle",
+		"edt_conf_v4l2_greenSignalThreshold_expl" : "Verdunkelt grüne Werte. (Wird als schwarz interpretiert)",
 		"edt_conf_v4l2_blueSignalThreshold_title" : "Blaue Signalschwelle",
+		"edt_conf_v4l2_blueSignalThreshold_expl" : "Verdunkelt blaue Werte. (Wird als schwarz interpretiert))",
 		"edt_conf_fg_heading_title" : "Plattform Aufnahme",
 		"edt_conf_fg_type_title" : "Typ",
+		"edt_conf_fg_type_expl" : "Art der Plattform Aufnahme, standard ist 'auto'",
 		"edt_conf_fg_frequency_Hz_title" : "Aufnahmefrequenz",
+		"edt_conf_fg_frequency_Hz_expl" : "Wie schnell neue Bilder aufgenommen werden.",
 		"edt_conf_fg_horizontalPixelDecimation_title" : "Horizontale Pixelreduzierung",
+		"edt_conf_fg_horizontalPixelDecimation_expl" : "Horizontale Pixelreduzierung (Faktor)",
 		"edt_conf_fg_useXGetImage_title" : "Nutze XGetImage",
+		"edt_conf_fg_useXGetImage_expl" : "XGetImage für aktuelle X11 desktops",
 		"edt_conf_fg_verticalPixelDecimation_title" : "Vertikale Pixelreduzierung",
+		"edt_conf_fg_verticalPixelDecimation_expl" : "Vertikale Pixelreduzierung (Faktor)",
 		"edt_conf_fg_device_title" : "Device",
 		"edt_conf_fg_display_title" : "Display",
+		"edt_conf_fg_display_expl" : "Gebe an von welchem Desktop aufgenommen werden soll. (Multi Monitor Setup)",
 		"edt_conf_bb_heading_title" : "Schwarze Balken Erkennung",
 		"edt_conf_bb_threshold_title" : "Schwelle",
+		"edt_conf_bb_threshold_expl" : "Wenn die Erkennung nicht funktioniert, erhöhe die Schwelle um auf 'graues' schwarz zu reagieren.",
 		"edt_conf_bb_unknownFrameCnt_title" : "unknownFrameCnt",
 		"edt_conf_bb_borderFrameCnt_title" : "borderFrameCnt",
 		"edt_conf_bb_maxInconsistentCnt_title" : "maxInconsistentCn",
 		"edt_conf_bb_blurRemoveCnt_title" : "blurRemoveCnt",
 		"edt_conf_bb_mode_title" : "Modus",
+		"edt_conf_bb_mode_expl" : "Algorithmus zur Auswertung. (siehe Wiki)",
 		"edt_conf_kodic_heading_title" : "Kodi Überwachung",
 		"edt_conf_kodic_kodiAddress_title" : "Kodi IP Adresse",
+		"edt_conf_kodic_kodiAddress_expl" : "Die IP Adresse von Kodi.",
 		"edt_conf_kodic_kodiTcpPort_title" : "Kodi TCP Port",
+		"edt_conf_kodic_kodiTcpPort_expl" : "Der Kodi TCP Port.",
 		"edt_conf_kodic_grabVideo_title" : "Video",
+		"edt_conf_kodic_grabVideo_expl" : "Wenn aktiviert, ist die Aufnahme aktiv während ein Video abgespielt werden.",
 		"edt_conf_kodic_grabPictures_title" : "Bilder",
+		"edt_conf_kodic_grabPictures_expl" : "Wenn aktiviert, ist die Aufnahme aktiv während Bilder angezeigt werden.",
 		"edt_conf_kodic_grabAudio_title" : "Audio",
+		"edt_conf_kodic_grabAudio_expl" : "Wenn aktiviert, ist die Aufnahme aktiv während Musik abgespielt wird.",
 		"edt_conf_kodic_grabMenu_title" : "Menü",
+		"edt_conf_kodic_grabMenu_expl" : "Wenn aktiviert, ist die Aufnahme aktiv während du dich im Kodi Menü oder Nutzerauswahl befindest.",
 		"edt_conf_kodic_grabPause_title" : "Pause",
+		"edt_conf_kodic_grabPause_expl" : "Wenn aktiviert, ist die Aufnahme aktiv während Kodi pausiert (Video, Musik, Diashow).",
 		"edt_conf_kodic_grabScreensaver_title" : "Bildschirmschoner",
+		"edt_conf_kodic_grabScreensaver_expl" : "Wenn aktiviert, ist die Aufnahme aktiv während Kodi pausiert (Video, Musik, Diashow).",
 		"edt_conf_kodic_enable3DDetection_title" : "Erkenne 3D",
+		"edt_conf_kodic_enable3DDetection_expl" : "Wenn aktiviert, erkenne und wende den passenden 3D Modus an. (kein MVC und nicht für USB Aufnahme)",
 		"edt_conf_fw_heading_title" : "Weiterleitung",
-		"edt_conf_fw_json_title" : "Liste von JSON zielen",
-		"edt_conf_fw_json_itemtitle" : "JSON Ziel",
-		"edt_conf_fw_proto_title" : "Liste von PROTO zielen",
-		"edt_conf_fw_proto_itemtitle" : "PROTO Ziel",
+		"edt_conf_fw_json_title" : "Liste von Json zielen",
+		"edt_conf_fw_json_expl" : "Ein Json Ziel pro Zeile. Bestehend aus IP:PORT (Beispiel: 127.0.0.1:19446)",
+		"edt_conf_fw_json_itemtitle" : "Json Ziel",
+		"edt_conf_fw_proto_title" : "Liste von Proto zielen",
+		"edt_conf_fw_proto_expl" : "Ein Proto Ziel pro Zeile. Bestehend aus IP:PORT (Beispiel: 127.0.0.1:19447)",
+		"edt_conf_fw_proto_itemtitle" : "Proto Ziel",
 		"edt_conf_js_heading_title" : "JSON Server",
 		"edt_conf_ps_heading_title" : "PROTO Server",
 		"edt_conf_bobls_heading_title" : "Boblight Server",
@@ -316,6 +367,7 @@
 		"edt_conf_udpl_shared_title" : "Gemeinsam genutzt",
 		"edt_conf_webc_heading_title" : "Web Konfiguration",
 		"edt_conf_webc_docroot_title" : "Verzeichnis",
+		"edt_conf_webc_docroot_expl" : "Lokaler Pfad zum WebUI Wurzelverzeichnis (Nur für WebUI Entwickler)",
 		"edt_conf_effp_paths_title" : "Effekt Pfad(e)",
 		"edt_conf_effp_paths_itemtitle" : "Pfad",
 		"edt_conf_effp_disable_title" : "Deaktivierte Effekte",
