--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -159,9 +159,19 @@
 	"conf_leds_layout_preview_l1": "Das ist die erste LED (Einspeisung)",
 	"conf_leds_layout_preview_l2": "Das visualisiert die Richtung des Datenstroms (zweite/dritte LED)",
 	"conf_leds_layout_cl_top": "Oben",
+	"conf_leds_layout_cl_topleft": "Oben Links (Ecke)",
+	"conf_leds_layout_cl_topright": "Oben Rechts (Ecke)",
 	"conf_leds_layout_cl_bottom": "Unten",
+	"conf_leds_layout_cl_bottomleft": "Unten Links (Ecke)",
+	"conf_leds_layout_cl_bottomright": "Unten Rechts (Ecke)",
 	"conf_leds_layout_cl_left": "Links",
+	"conf_leds_layout_cl_lefttop": "Links 0% - 50% von Oben",
+	"conf_leds_layout_cl_leftmiddle": "Links 25% - 75% Mitte",
+	"conf_leds_layout_cl_leftbottom": "Links 50% - 100% Unten",
 	"conf_leds_layout_cl_right": "Rechts",
+	"conf_leds_layout_cl_righttop": "Rechts 0% - 50% von Oben",
+	"conf_leds_layout_cl_rightmiddle": "Rechts 25% - 75% Mitte",
+	"conf_leds_layout_cl_rightbottom": "Rechts 50% - 100% Unten",
 	"conf_leds_layout_cl_gaglength": "Lückenlänge",
 	"conf_leds_layout_cl_gappos": "Lückenposition",
 	"conf_leds_layout_cl_inppos": "Einspeisepunkt",
@@ -356,6 +366,7 @@
 	"wiz_hue_desc2": "Nun kannst du auswählen, welche der Lampen (IDs) hinzugefügt werden sollen. Mit der Position wählst du aus, wo die jeweilige Lampe \"im Bild\" sitzen soll. Deaktivierte Lampen werden nicht hinzugefügt. Als Hilfe zur Identifizierung kannst du sie mit einem Klick auf den rechten Button kurz aufleuchten lassen.",
 	"wiz_hue_ip": "Hue Bridge IP:",
 	"wiz_hue_username": "Benutzer ID:",
+	"wiz_hue_clientkey": "Clientkey:",
 	"wiz_hue_create_user": "Neuen Benutzer erstellen",
 	"wiz_hue_failure_ip": "Keine Hue Bridge gefunden, bitte überprüfe die IP",
 	"wiz_hue_failure_connection": "Zeitüberschreitung. Bitte drücke die Taste auf deiner Hue Bridge rechtzeitig",
@@ -368,6 +379,16 @@
 	"wiz_hue_searchb": "Suche nach Hue Bridge...",
 	"wiz_hue_blinkblue": "Lasse ID $1 blau aufleuchten",
 	"wiz_hue_ident": "Identifiziere",
+	"wiz_hue_e_create_user": "Neuen Benutzer und Clientkey erstellen",
+	"wiz_hue_e_use_groupid": "Gruppen ID $1 verwenden",
+	"wiz_hue_e_noegrpids": "Diese Hue Bridge hat keine definierten Entertainment Gruppen",
+	"wiz_hue_e_nogrpids": "Diese Hue Bridge hat keine definierten Gruppen, bitte erstelle zuvor wenigstens eine in der Hue App",
+	"wiz_hue_e_title": "Philips Hue Entertainment Assistent",
+	"wiz_hue_e_intro1": "Dieser Assistent hilft dir bei der Konfiguration von Hyperion für Philips Hue Entertainment. Zu den Funktionen zählen ein automatisches finden der Hue Bridge, einen neuen Benutzer und dazugehörigen Clientkey zum verwenden der Entertainment API erstellen, eine Entertainment Gruppenauswahl und die zur Gruppe gehörenden Lampen unterschiedlichen Bereichen im Bild zuzuordnen, sowie weitere Einstellungen von Hyperion automatisch anzupassen. Kurz gesagt: Komplette Einrichtung mit ein paar Klicks.",
+	"wiz_hue_e_desc1": "Es wird automatisch nach der Hue Bridge gesucht, solltest sie nicht gefunden werden, gebe die IP an und drücke den \"neu laden\" Button. Danach benötigst du eine gültige Benutzer ID und den dazugehörigen Clientkey, damit die Entertainment API verwendet werden kann. Beides kann auch automatisch erstellt werden.",
+	"wiz_hue_e_desc2": "Nun kannst du die Entertainment Gruppe auswählen, welche die Lampen zur Verwendung mit Hyperion beinhaltet.",
+	"wiz_hue_e_desc3": "Nun kannst du auswählen, mit welcher Position die jeweilige Lampe \"im Bild\" sitzen soll. Eine Vorauswahl der Position, wurde Anhand der konfigurierten Positionen der Lampen in der Entertainment Gruppe gewählt. Dies ist nur eine Empfehlung und kann beliebig angepasst werden. Als Hilfe zur Identifizierung kannst du sie mit einem Klick auf den rechten Button kurz aufleuchten lassen und die Auswahl zu verbessern.",
+	"wiz_hue_e_use_group": "Gruppe verwenden",
 	"wiz_cc_title": "Farbkalibrierungs Assistent",
 	"wiz_cc_intro1": "Der Assistent wird dich durch die Kalibrierung deiner LEDs leiten. Sofern du Kodi nutzt, können die Bilder und Testvideos direkt an Kodi geschickt werden. Andernfalls musst du das Material selbst herunterladen und anwenden.",
 	"wiz_cc_kwebs": "Kodi Webserver (IP:Port)",
@@ -424,9 +445,16 @@
 	"edt_dev_spec_lightid_title": "Lampen ID(s)",
 	"edt_dev_spec_lightid_itemtitle": "ID",
 	"edt_dev_spec_transistionTime_title": "Übergangszeit",
+	"edt_dev_spec_blackLightsTimeout_title": "Signal Erkennung Timeout bei schwarz",
 	"edt_dev_spec_switchOffOnBlack_title": "Aus bei schwarz",
 	"edt_dev_spec_brightnessFactor_title": "Helligkeitsfaktor",
-	"edt_dev_spec_restoreOriginalState_title" : "Lampen Originalzustand wiederhestellen",
+	"edt_dev_spec_brightnessMin_title": "Helligkeit minimum",
+	"edt_dev_spec_brightnessMax_title": "Helligkeit maximum",
+	"edt_dev_spec_logCommands_title": "Logge alle Hue Commandos",
+	"edt_dev_spec_debugStreamer_title": "Streamer Debugging",
+	"edt_dev_spec_debugLevel_title": "Streamer Verbindung Debug Stufe",
+	"edt_dev_spec_restoreOriginalState_title" : "Lampen Originalzustand wiederherstellen",
+	"edt_dev_spec_useEntertainmentAPI_title": "Hue Entertainment API verwenden",
 	"edt_dev_spec_ledType_title": "LED typ",
 	"edt_dev_spec_uid_title": "UID",
 	"edt_dev_spec_intervall_title": "Intervall",
@@ -449,7 +477,9 @@
 	"edt_dev_spec_gpioBcm_title": "GPIO Pin",
 	"edt_dev_spec_ledIndex_title": "LED index",
 	"edt_dev_spec_colorComponent_title": "Farbkomponente",
+	"edt_dev_spec_clientKey_title": "Clientkey",
 	"edt_dev_spec_printTimeStamp_title" : "Mit Zeitstempel",
+	"edt_dev_spec_groupId_title": "Gruppen ID",
 	"edt_conf_general_enable_title": "Aktiviert",
 	"edt_conf_general_enable_expl": "Wenn aktiviert, ist die Komponente aktiv.",
 	"edt_conf_general_priority_title": "Priorität",
@@ -479,6 +509,11 @@
 	"edt_conf_enum_bbclassic": "Klassisch",
 	"edt_conf_enum_bbosd": "OSD",
 	"edt_conf_enum_automatic": "Automatisch",
+	"edt_conf_enum_dl_nodebug": "kein Debugging",
+	"edt_conf_enum_dl_error": "nur Fehler",
+	"edt_conf_enum_dl_statechange": "bei Änderungen",
+	"edt_conf_enum_dl_informational": "informativ",
+	"edt_conf_enum_dl_verbose": "sehr detailiert",
 	"edt_conf_gen_heading_title": "Allgemeine Einstellungen",
 	"edt_conf_gen_name_title": "Name der Konfiguration",
 	"edt_conf_gen_name_expl": "Der Name wird verwendet, um Hyperion besser zu identifizieren. (Hilfreich bei mehreren Instanzen)",
