--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -157,10 +157,20 @@
 	"conf_leds_layout_preview_ledpower" : "Max. power consumption: $1 A",
 	"conf_leds_layout_preview_l1" : "This is your first led (input position)",
 	"conf_leds_layout_preview_l2" : "This visualizes the data direction (second/third led)",
-	"conf_leds_layout_cl_top" : "Top",
-	"conf_leds_layout_cl_bottom" : "Bottom",
-	"conf_leds_layout_cl_left" : "Left",
-	"conf_leds_layout_cl_right" : "Right",
+	"conf_leds_layout_cl_top": "Top",
+	"conf_leds_layout_cl_topleft": "Top Left (Corner)",
+	"conf_leds_layout_cl_topright": "Top Right (Corner)",
+	"conf_leds_layout_cl_bottom": "Bottom",
+	"conf_leds_layout_cl_bottomleft": "Bottom Left (Corner)",
+	"conf_leds_layout_cl_bottomright": "Bottom Right (Corner)",
+	"conf_leds_layout_cl_left": "Left",
+	"conf_leds_layout_cl_lefttop": "Left 0% - 50% Top",
+	"conf_leds_layout_cl_leftmiddle": "Left 25% - 75% Middle",
+	"conf_leds_layout_cl_leftbottom": "Left 50% - 100% Bottom",
+	"conf_leds_layout_cl_right": "Right",
+	"conf_leds_layout_cl_righttop": "Right 0% - 50% Top",
+	"conf_leds_layout_cl_rightmiddle": "Right 25% - 75% Middle",
+	"conf_leds_layout_cl_rightbottom": "Right 50% - 100% Bottom",
 	"conf_leds_layout_cl_gaglength" : "Gap length",
 	"conf_leds_layout_cl_gappos" : "Gap position",
 	"conf_leds_layout_cl_inppos" : "Input position",
@@ -355,6 +365,7 @@
 	"wiz_hue_desc2" : "Now choose which lamps should be added. The position assigns the lamp to a specific position on your \"picture\". Disabled lamps won't be added. To identify single lamps press the button on the right.",
 	"wiz_hue_ip" : "Hue Bridge IP:",
 	"wiz_hue_username" : "User ID:",
+	"wiz_hue_clientkey" : "Clientkey:",
 	"wiz_hue_create_user" : "Create new User",
 	"wiz_hue_failure_ip" : "No Bridge found, please type in a valid ip",
 	"wiz_hue_failure_connection" : "Timeout: Please press the bridge button within the period of 30 seconds",
@@ -367,6 +378,16 @@
 	"wiz_hue_searchb": "Searching for bridge...",
 	"wiz_hue_blinkblue": "Let ID $1 light up blue",
 	"wiz_hue_ident" : "Identify",
+	"wiz_hue_e_create_user" : "Create new User and clientkey",
+	"wiz_hue_e_use_groupid": "Use group ID $1",
+	"wiz_hue_e_noegrpids": "This Hue bridge has no entertainment groups defined",
+	"wiz_hue_e_nogrpids": "This Hue bridge has no groups defined, please create at least one before with the Hue Apps",
+	"wiz_hue_e_title" : "Philips Hue Entertainment Wizard",
+	"wiz_hue_e_intro1" : "This wizards configures Hyperion for the well known Philips Hue Entertainment system. Features are Hue Bridge auto detection, user and clientkey creation, entertainment group selection and set group lights to a specific position on your picture and tune the Hyperion settings automatically! So in short: All you need are some clicks and you are done!",
+	"wiz_hue_e_desc1" : "It searches automatically for a hue bridge, in case it can't find one you need to provide the ip address and push the reload button on the right. Now you need a user id and the clientkey, if you don't have both, create a new one.",
+	"wiz_hue_e_desc2" : "Now choose your entertainment group, which has all your lights inside for use with Hyperion.",
+	"wiz_hue_e_desc3": "Now you can choose in which position the respective lamp should be \"in the picture\". A preselection of the position was made based on the configured positions of the lights in the entertainment group. This is just a recommendation and can be customized as desired. You can therefore highlight them briefly by clicking on the right button to improve the selection.",
+	"wiz_hue_e_use_group" : "Use group",
 	"wiz_cc_title" : "Colour calibration wizard",
 	"wiz_cc_intro1" : "This wizard will guide you through your led calibration. If you are using Kodi, the calibration pictures and videos can be sent directly to it without further actions on your side. If not, you will need to download these files yourself and display them when the wizard needs you to adjust the setting.",
 	"wiz_cc_kwebs" : "Kodi webserver (IP:Port)",
@@ -423,9 +444,16 @@
 	"edt_dev_spec_lightid_title" : "Light ID(s)",
 	"edt_dev_spec_lightid_itemtitle" : "ID",
 	"edt_dev_spec_transistionTime_title" : "Transition time",
+	"edt_dev_spec_blackLightsTimeout_title": "Signal detection timeout on black",
 	"edt_dev_spec_switchOffOnBlack_title" : "Switch off on black",
 	"edt_dev_spec_brightnessFactor_title" : "Brightness factor",
+	"edt_dev_spec_brightnessMin_title": "Brightness minimum",
+	"edt_dev_spec_brightnessMax_title": "Brightness maximum",
+	"edt_dev_spec_logCommands_title": "Log all Hue commands",
+	"edt_dev_spec_debugStreamer_title": "Streamer Debug",
+	"edt_dev_spec_debugLevel_title": "Streamer Connection Debug Level",
 	"edt_dev_spec_restoreOriginalState_title" : "Restore lights' original state",
+	"edt_dev_spec_useEntertainmentAPI_title": "Use Hue Entertainment API",
 	"edt_dev_spec_ledType_title" : "LED Type",
 	"edt_dev_spec_uid_title" : "UID",
 	"edt_dev_spec_intervall_title" : "Interval",
@@ -449,6 +477,8 @@
 	"edt_dev_spec_ledIndex_title" : "LED index",
 	"edt_dev_spec_colorComponent_title" : "Colour component",
 	"edt_dev_spec_printTimeStamp_title" : "Add timestamp",
+	"edt_dev_spec_clientKey_title" : "Clientkey",
+	"edt_dev_spec_groupId_title" : "Group Id",
 	"edt_conf_general_enable_title" : "Activate",
 	"edt_conf_general_enable_expl" : "If checked, the component is enabled.",
 	"edt_conf_general_priority_title" : "Priority channel",
@@ -478,6 +508,11 @@
 	"edt_conf_enum_bbclassic" : "Classic",
 	"edt_conf_enum_bbosd" : "OSD",
 	"edt_conf_enum_automatic" : "Automatic",
+	"edt_conf_enum_dl_nodebug": "No Debug",
+	"edt_conf_enum_dl_error": "Error",
+	"edt_conf_enum_dl_statechange": "State Change",
+	"edt_conf_enum_dl_informational": "Informational",
+	"edt_conf_enum_dl_verbose": "Verbose",
 	"edt_conf_gen_heading_title" : "General Settings",
 	"edt_conf_gen_name_title" : "Configuration name",
 	"edt_conf_gen_name_expl" : "A user defined name which is used to identify Hyperion. (Helpful if you have more than one Hyperion instance)",
