--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -17,6 +17,8 @@
 	"general_speech_pl" : "Polnisch",
 	"general_speech_ro" : "Rumänisch",
 	"general_speech_tr" : "Türkisch",
+	"general_speech_vi" : "Vietnamesisch",
+	"general_speech_fr" : "Französisch",
 	"general_access_default": "Standard",
 	"general_access_advanced": "Fortgeschritten",
 	"general_access_expert": "Experte",
@@ -489,7 +491,7 @@
 	"edt_dev_spec_clientKey_title": "Clientkey",
 	"edt_dev_spec_printTimeStamp_title" : "Mit Zeitstempel",
 	"edt_dev_spec_groupId_title": "Gruppen ID",
-	"edt_dev_spec_panelorganisation_title" : "Nummerierungsreihenfolge der Panels",	
+	"edt_dev_spec_panelorganisation_title" : "Nummerierungsreihenfolge der Panels",
 	"edt_dev_spec_order_top_down_title" : "1.",
 	"edt_dev_spec_order_left_right_title" : "2.",
 	"edt_dev_spec_panel_start_position" : "Startpanel [0-max Panels]",
@@ -531,7 +533,7 @@
 	"edt_conf_enum_bottom_up": "von unten nach oben",
 	"edt_conf_enum_top_down": "von oben nach unten",
 	"edt_conf_enum_right_left": "von rechts and links",
-	"edt_conf_enum_left_right": "von links nach rechts",	
+	"edt_conf_enum_left_right": "von links nach rechts",
 	"edt_conf_gen_heading_title": "Allgemeine Einstellungen",
 	"edt_conf_gen_name_title": "Name der Konfiguration",
 	"edt_conf_gen_name_expl": "Der Name wird verwendet, um Hyperion besser zu identifizieren. (Hilfreich bei mehreren Instanzen)",
