--- a/assets/webconfig/i18n/it.json
+++ b/assets/webconfig/i18n/it.json
@@ -886,5 +886,6 @@
     "conf_leds_layout_ptr": "",
     "conf_leds_layout_pbl": "",
     "conf_leds_layout_pbr": "",
-    "edt_dev_spec_chanperfixture_title": ""
+    "edt_dev_spec_chanperfixture_title": "",
+    "dashboard_message_do_not_show_again": ""
 }
