--- a/assets/webconfig/i18n/ro.json
+++ b/assets/webconfig/i18n/ro.json
@@ -16,7 +16,7 @@
     "general_access_advanced": "Avansat",
     "general_access_expert": "Expert",
     "general_comp_SMOOTHING": "",
-    "general_comp_BLACKBORDER": "",
+    "general_comp_BLACKBORDER": "Detecție bare negre",
     "general_comp_FORWARDER": "",
     "general_comp_BOBLIGHTSERVER": "Server Boblight",
     "general_comp_FLATBUFSERVER": "",
@@ -42,19 +42,19 @@
     "general_btn_iswitch": "",
     "general_wiki_moreto": "",
     "dashboard_label_intro": "",
-    "dashboard_infobox_label_title": "",
-    "dashboard_infobox_label_currenthyp": "",
-    "dashboard_infobox_label_latesthyp": "",
-    "dashboard_infobox_label_platform": "",
-    "dashboard_infobox_label_instance": "",
+    "dashboard_infobox_label_title": "Informații",
+    "dashboard_infobox_label_currenthyp": "Versiunea ta Hyperion:",
+    "dashboard_infobox_label_latesthyp": "Cea mai nouă versiune Hyperion:",
+    "dashboard_infobox_label_platform": "Platformă:",
+    "dashboard_infobox_label_instance": "Instanță:",
     "dashboard_infobox_label_ports": "",
-    "dashboard_infobox_message_updatewarning": "",
-    "dashboard_infobox_message_updatesuccess": "",
-    "dashboard_infobox_label_statush": "",
+    "dashboard_infobox_message_updatewarning": "Este disponibilă o nouă versiune Hyperion! ($1)",
+    "dashboard_infobox_message_updatesuccess": "Rulezi cea mai recentă versiune Hyperion.",
+    "dashboard_infobox_label_statush": "Stare Hyperion:",
     "dashboard_infobox_label_smartacc": "",
-    "dashboard_infobox_label_enableh": "",
-    "dashboard_infobox_label_disableh": "",
-    "dashboard_componentbox_label_title": "",
+    "dashboard_infobox_label_enableh": "Activare Hyperion",
+    "dashboard_infobox_label_disableh": "Dezactivare Hyperion",
+    "dashboard_componentbox_label_title": "Stare componente",
     "dashboard_componentbox_label_comp": "",
     "dashboard_componentbox_label_status": "",
     "dashboard_newsbox_label_title": "",
@@ -66,25 +66,25 @@
     "dashboard_alert_message_disabled_t": "",
     "dashboard_alert_message_disabled": "",
     "dashboard_alert_message_confsave_success_t": "",
-    "dashboard_alert_message_confsave_success": "",
-    "main_menu_dashboard_token": "",
-    "main_menu_configuration_token": "",
-    "main_menu_general_conf_token": "",
+    "dashboard_alert_message_confsave_success": "Configurația ta Hyperion a fost salvată cu succes. Modificările sunt active acum.",
+    "main_menu_dashboard_token": "Panou control",
+    "main_menu_configuration_token": "Configurație",
+    "main_menu_general_conf_token": "General",
     "main_menu_leds_conf_token": "",
     "main_menu_grabber_conf_token": "",
-    "main_menu_effect_conf_token": "",
-    "main_menu_colors_conf_token": "",
-    "main_menu_network_conf_token": "",
-    "main_menu_remotecontrol_token": "",
-    "main_menu_effectsconfigurator_token": "",
-    "main_menu_support_token": "",
-    "main_menu_update_token": "",
-    "main_menu_system_token": "",
+    "main_menu_effect_conf_token": "Efecte",
+    "main_menu_colors_conf_token": "Procesare imagine",
+    "main_menu_network_conf_token": "Servicii rețea",
+    "main_menu_remotecontrol_token": "Telecomandă",
+    "main_menu_effectsconfigurator_token": "Configurator efecte",
+    "main_menu_support_token": "Ajutor",
+    "main_menu_update_token": "Actualizare",
+    "main_menu_system_token": "Sistem",
     "main_menu_input_selection_token": "",
-    "main_menu_logging_token": "",
-    "main_menu_webconfig_token": "",
-    "main_menu_about_token": "",
-    "main_ledsim_title": "",
+    "main_menu_logging_token": "Jurnal",
+    "main_menu_webconfig_token": "Configurație web",
+    "main_menu_about_token": "Despre Hyperion",
+    "main_ledsim_title": "Vizualizare LED",
     "main_ledsim_text": "",
     "main_ledsim_btn_toggleleds": "",
     "main_ledsim_btn_togglelednumber": "",
@@ -103,14 +103,14 @@
     "conf_effect_bgeff_intro": "",
     "conf_leds_device_intro": "",
     "conf_leds_layout_intro": "",
-    "conf_leds_nav_label_ledcontroller": "",
+    "conf_leds_nav_label_ledcontroller": "Controller LED",
     "conf_leds_nav_label_ledlayout": "",
-    "conf_leds_contr_label_contrtype": "",
-    "conf_leds_optgroup_RPiSPI": "",
-    "conf_leds_optgroup_RPiPWM": "",
-    "conf_leds_optgroup_RPiGPIO": "",
-    "conf_leds_optgroup_network": "",
-    "conf_leds_optgroup_usb": "",
+    "conf_leds_contr_label_contrtype": "Tip controller",
+    "conf_leds_optgroup_RPiSPI": "RPi SPI",
+    "conf_leds_optgroup_RPiPWM": "RPi PWM",
+    "conf_leds_optgroup_RPiGPIO": "PRi GPIO",
+    "conf_leds_optgroup_network": "Rețea",
+    "conf_leds_optgroup_usb": "USB",
     "conf_leds_optgroup_debug": "",
     "conf_leds_layout_btn_checklist": "",
     "conf_leds_layout_checkp1": "",
@@ -120,8 +120,8 @@
     "conf_leds_layout_frame": "",
     "conf_leds_layout_matrix": "",
     "conf_leds_layout_generatedconf": "",
-    "conf_leds_layout_button_savelay": "",
-    "conf_leds_layout_button_updsim": "",
+    "conf_leds_layout_button_savelay": "Salvare model",
+    "conf_leds_layout_button_updsim": "Actualizare previzualizare",
     "conf_leds_layout_peview": "",
     "conf_leds_layout_advanced": "",
     "conf_leds_layout_preview_originCL": "",
@@ -131,10 +131,10 @@
     "conf_leds_layout_preview_ledpower": "",
     "conf_leds_layout_preview_l1": "",
     "conf_leds_layout_preview_l2": "",
-    "conf_leds_layout_cl_top": "",
-    "conf_leds_layout_cl_bottom": "",
-    "conf_leds_layout_cl_left": "",
-    "conf_leds_layout_cl_right": "",
+    "conf_leds_layout_cl_top": "Sus",
+    "conf_leds_layout_cl_bottom": "Jos",
+    "conf_leds_layout_cl_left": "Stânga",
+    "conf_leds_layout_cl_right": "Dreapta",
     "conf_leds_layout_cl_gaglength": "",
     "conf_leds_layout_cl_gappos": "",
     "conf_leds_layout_cl_inppos": "",
@@ -144,13 +144,13 @@
     "conf_leds_layout_cl_edgegap": "",
     "conf_leds_layout_cl_cornergap": "",
     "conf_leds_layout_cl_overlap": "",
-    "conf_leds_layout_ma_horiz": "",
-    "conf_leds_layout_ma_vert": "",
-    "conf_leds_layout_ma_cabling": "",
-    "conf_leds_layout_ma_optsnake": "",
-    "conf_leds_layout_ma_optparallel": "",
-    "conf_leds_layout_ma_order": "",
-    "conf_leds_layout_ma_opthoriz": "",
+    "conf_leds_layout_ma_horiz": "Orizontal",
+    "conf_leds_layout_ma_vert": "Vertical",
+    "conf_leds_layout_ma_cabling": "Cablare",
+    "conf_leds_layout_ma_optsnake": "Șarpe",
+    "conf_leds_layout_ma_optparallel": "Paralel",
+    "conf_leds_layout_ma_order": "Direcție",
+    "conf_leds_layout_ma_opthoriz": "Orizontal",
     "conf_leds_layout_ma_optvert": "",
     "conf_leds_layout_ma_position": "",
     "conf_leds_layout_ma_opttopleft": "",
@@ -175,13 +175,13 @@
     "conf_logging_uploading": "",
     "conf_logging_yourlink": "",
     "conf_logging_uplfailed": "",
-    "conf_logging_report": "",
-    "conf_logging_lastreports": "",
-    "conf_logging_uplpolicy": "",
-    "conf_logging_contpolicy": "",
+    "conf_logging_report": "Raport",
+    "conf_logging_lastreports": "Rapoarte anterioare",
+    "conf_logging_uplpolicy": "Apăsând acest buton accepți",
+    "conf_logging_contpolicy": "Politica de confidențialitate pentru raport",
     "conf_webconfig_label_intro": "",
     "remote_losthint": "",
-    "remote_color_label": "",
+    "remote_color_label": "Culori/Efecte",
     "remote_color_intro": "",
     "remote_color_button_reset": "",
     "remote_color_label_color": "",
@@ -198,12 +198,12 @@
     "remote_input_label_autoselect": "",
     "remote_input_setsource_btn": "",
     "remote_input_sourceactiv_btn": "",
-    "remote_input_origin": "",
-    "remote_input_owner": "",
-    "remote_input_priority": "",
-    "remote_input_status": "",
-    "remote_input_duration": "",
-    "remote_input_ip": "",
+    "remote_input_origin": "Origine",
+    "remote_input_owner": "Tip",
+    "remote_input_priority": "Prioritate",
+    "remote_input_status": "Stare/Acțiune",
+    "remote_input_duration": "Durată:",
+    "remote_input_ip": "IP:",
     "remote_input_clearall": "",
     "remote_components_label": "",
     "remote_components_intro": "",
@@ -431,7 +431,6 @@
     "edt_conf_enum_bbclassic": "",
     "edt_conf_enum_bbosd": "",
     "edt_conf_enum_automatic": "",
-    "edt_conf_enum_custom": "",
     "edt_conf_gen_heading_title": "",
     "edt_conf_gen_name_title": "",
     "edt_conf_gen_name_expl": "",
@@ -493,10 +492,6 @@
     "edt_conf_v4l2_device_expl": "",
     "edt_conf_v4l2_standard_title": "",
     "edt_conf_v4l2_standard_expl": "",
-    "edt_conf_v4l2_resolution_title": "",
-    "edt_conf_v4l2_resolution_expl": "",
-    "edt_conf_v4l2_framerate_title": "",
-    "edt_conf_v4l2_framerate_expl": "",
     "edt_conf_v4l2_sizeDecimation_title": "",
     "edt_conf_v4l2_sizeDecimation_expl": "",
     "edt_conf_v4l2_cropLeft_title": "",
@@ -808,12 +803,89 @@
     "edt_conf_net_localAdminAuth_expl": "",
     "edt_eff_collision_header": "",
     "edt_eff_collision_header_desc": "",
-    "edt_eff_plasma_header": "",
-    "edt_eff_plasma_header_desc": "",
     "edt_eff_explodeRadius": "",
     "edt_dev_spec_printTimeStamp_title": "",
     "edt_eff_ledtest_header": "",
     "edt_eff_ledtest_header_desc": "",
     "update_no_updates_for_branch": "",
-    "general_speech_sv": ""
+    "general_speech_sv": "",
+    "general_speech_nl": "",
+    "general_speech_pl": "",
+    "general_speech_ro": "",
+    "general_btn_saverestart": "",
+    "general_btn_grantAccess": "",
+    "general_btn_denyAccess": "",
+    "conf_leds_layout_cl_topleft": "",
+    "conf_leds_layout_cl_topright": "",
+    "conf_leds_layout_cl_bottomleft": "",
+    "conf_leds_layout_cl_bottomright": "",
+    "conf_leds_layout_cl_lefttop": "",
+    "conf_leds_layout_cl_leftmiddle": "",
+    "conf_leds_layout_cl_leftbottom": "",
+    "conf_leds_layout_cl_righttop": "",
+    "conf_leds_layout_cl_rightmiddle": "",
+    "conf_leds_layout_cl_rightbottom": "",
+    "conf_network_tok_grantT": "",
+    "conf_network_tok_grantMsg": "",
+    "wiz_hue_clientkey": "",
+    "wiz_hue_e_create_user": "",
+    "wiz_hue_e_clientkey_needed": "",
+    "wiz_hue_e_use_groupid": "",
+    "wiz_hue_e_noegrpids": "",
+    "wiz_hue_e_nogrpids": "",
+    "wiz_hue_e_noapisupport": "",
+    "wiz_hue_e_noapisupport_hint": "",
+    "wiz_hue_e_title": "",
+    "wiz_hue_e_intro1": "",
+    "wiz_hue_e_desc1": "",
+    "wiz_hue_e_desc2": "",
+    "wiz_hue_e_desc3": "",
+    "wiz_hue_e_use_group": "",
+    "edt_dev_spec_blackLightsTimeout_title": "",
+    "edt_dev_spec_brightnessThreshold_title": "",
+    "edt_dev_spec_brightnessMin_title": "",
+    "edt_dev_spec_brightnessMax_title": "",
+    "edt_dev_spec_sslReadTimeout_title": "",
+    "edt_dev_spec_sslHSTimeoutMin_title": "",
+    "edt_dev_spec_sslHSTimeoutMax_title": "",
+    "edt_dev_spec_verbose_title": "",
+    "edt_dev_spec_debugStreamer_title": "",
+    "edt_dev_spec_debugLevel_title": "",
+    "edt_dev_spec_restoreOriginalState_title": "",
+    "edt_dev_spec_useEntertainmentAPI_title": "",
+    "edt_dev_spec_clientKey_title": "",
+    "edt_dev_spec_groupId_title": "",
+    "edt_dev_spec_panelorganisation_title": "",
+    "edt_dev_spec_order_top_down_title": "",
+    "edt_dev_spec_order_left_right_title": "",
+    "edt_dev_spec_panel_start_position": "",
+    "edt_conf_enum_dl_nodebug": "",
+    "edt_conf_enum_dl_error": "",
+    "edt_conf_enum_dl_statechange": "",
+    "edt_conf_enum_dl_informational": "",
+    "edt_conf_enum_dl_verbose": "",
+    "edt_conf_enum_custom": "",
+    "edt_conf_enum_bottom_up": "",
+    "edt_conf_enum_top_down": "",
+    "edt_conf_enum_right_left": "",
+    "edt_conf_enum_left_right": "",
+    "edt_conf_v4l2_input_title": "",
+    "edt_conf_v4l2_input_expl": "",
+    "edt_conf_v4l2_resolution_title": "",
+    "edt_conf_v4l2_resolution_expl": "",
+    "edt_conf_v4l2_framerate_title": "",
+    "edt_conf_v4l2_framerate_expl": "",
+    "edt_eff_plasma_header": "",
+    "edt_eff_plasma_header_desc": "",
+    "edt_append_percent_h": "",
+    "edt_append_percent_v": "",
+    "conf_leds_layout_ptln": "",
+    "conf_leds_layout_ptlh": "",
+    "conf_leds_layout_ptlv": "",
+    "conf_leds_layout_ptl": "",
+    "conf_leds_layout_ptr": "",
+    "conf_leds_layout_pbl": "",
+    "conf_leds_layout_pbr": "",
+    "edt_dev_spec_chanperfixture_title": "",
+    "dashboard_message_do_not_show_again": ""
 }
